# cuda-stuffs

./: .clang-format  CMakeLists.txt  a.py  pyproject.toml
cmake/: DebugHelper.cmake
src/: head.hpp  kernel.cu  kernel.cuh  main.cpp
